--- a/lista.html
+++ b/lista.html
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista estudiantes</title>
+    <title>Datos de Huerta</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Lista de Estudiantes</h1>
-    <div class="lista">
-        <table>
-            <thead>
-                <tr>
-                    <th>DNI</th>
-                    <th>Apellido</th>
-                    <th>Nombre</th>
-                    <th>Edad</th>
-                </tr>
-            </thead>
-            <tbody class="tabla-estudiantes">
-                <!-- Las filas de la tabla se agregarán aquí dinámicamente -->
-            </tbody>
-        </table>
+
+    <div class="card">
+        <h2>🌱 Datos de Sensores - Huerta</h2>
+
+        <div class="dato">
+            <span class="label">Humedad del Aire:</span>
+            <span class="valor">56.3%</span>
+        </div>
+
+        <div class="dato">
+            <span class="label">Humedad del Suelo:</span>
+            <span class="valor">0%</span>
+        </div>
+
+        <div class="dato">
+            <span class="label">Temperatura:</span>
+            <span class="valor">27.8°C</span>
+        </div>
     </div>
+
 </body>
-<script src="lista.js" type="module"></script>
 </html>
