--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
             <p> Humedad del aire: <span id="aire">--</span>%</p>
             <p> Temperatura: <span id="temperatura">--</span>°C</p>
         </div>
-      <p id="mensajeSuelo" class="mensaje"></p>
+
+        <p id="mensajeSuelo" class="mensaje"></p>
     </div>
 
+    <script type="module" src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
+
